--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.21",
+    "gsap": "^3.12.5",
+    "lenis": "^1.1.9",
     "lucide-react": "^0.419.0",
     "next": "14.2.5",
     "react": "^18",
